# agilio-ovs-openstack-plugin

./: .ansible-lint  .coveragerc  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  setup.cfg  tox.ini
ansible/: hosts.yaml  playbook.yaml  prepare-devstack.sh
ansible/roles/aovs-plugin/defaults/: main.yaml
ansible/roles/aovs-plugin/tasks/: main.yaml
ansible/roles/cleanup-cloud-init/tasks/: main.yaml
ansible/roles/devstack/tasks/: main.yaml
ansible/roles/devstack/templates/: local.conf.j2  local.sh.j2
ansible/roles/flower-firmware/defaults/main/: all.yaml  (+2 more)
ansible/roles/flower-firmware/tasks/: dracut.yaml  firmware-from-github.yaml  initramfs-tools.yaml  main.yaml
ansible/roles/flower-firmware/templates/: initramfs-hook.j2
ansible/roles/kernel-settings/tasks/: debian.yaml  main.yaml  redhat.yaml
ansible/roles/network-config/defaults/: main.yaml
ansible/roles/network-config/tasks/: main.yaml  redhat.yaml  ubuntu.yaml
ansible/roles/network-config/templates/: ifcfg-smartnic.j2  ifcfg-up.j2  netplan.yaml.j2
ansible/roles/openvswitch/tasks/: debian.yaml  main.yaml  redhat.yaml
ansible/roles/probe-tuning-profile/tasks/: main.yaml
ansible/roles/required-packages/tasks/: debian.yaml  redhat.yaml
ansible/roles/swap/tasks/: main.yaml
ansible/roles/switchdev/tasks/: main.yaml
ansible/roles/switchdev/templates/: 50-allocate-vfs.j2  allocate-vfs.j2  switchdev-repr-name-gen.j2
ansible/roles/system-logging/tasks/: main.yaml
ansible/roles/vfio-module/tasks/: main.yaml
ansible/roles/virtio-forwarder/tasks/: debian.yaml  main.yaml  redhat.yaml
ansible/roles/virtio-forwarder/templates/: virtioforwarder.j2
ansible/scripts/: gen_tuning_profile.py  scan_switchdevs.py
ansible/templates/: 77-switchdev-repr-name.rules.j2  dracut.conf.j2  ifcfg-smartnic.j2  ifcfg-up.j2  local.conf.j2  local.conf.vanilla.j2  switchdev-repr-name-gen.j2
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
networking_netronome/: mech_agilio_ovs.py
networking_netronome/tests/: test_networking_netronome.py
releasenotes/source/: conf.py  index.rst
vif_plug_agilio_ovs/: __init__.py  agilio_linux_net.py  agilio_ovs.py  privsep.py
vif_plug_agilio_ovs/tests/unit/: test_agilio_linux_net.py  test_plugin.py
