[metadata]
name = agilio-ovs-openstack-plugin
summary = Neutron ML2 and OS-VIF plugin for Agilio OVS
description-file =
    README.rst
author = Netronome
author-email = support@netronome.com
home-page = https://github.com/netronome/agilio-ovs-openstack-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_netronome
    vif_plug_agilio_ovs

[compile_catalog]
directory = networking_netronome/locale
domain = networking_netronome

[update_catalog]
domain = networking_netronome
output_dir = networking_netronome/locale
input_file = networking_netronome/locale/networking_netronome.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_netronome/locale/networking_netronome.pot

[entry_points]
neutron.ml2.mechanism_drivers =
    agilio_ovs = networking_netronome.mech_agilio_ovs:AgilioOvsMechanismDriver
os_vif =
    agilio_ovs = vif_plug_agilio_ovs.agilio_ovs:AgilioOvsPlugin
